# vtt-ordem

./: .gitignore  README.md  db.py  dice_utils.py  main.py  models.py  pyproject.toml  run.bat  test_api.py  vtt_tables.db
frontend/: README.md  env.local  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/table/[id]/: page.tsx
frontend/src/components/: CanvasTokens.tsx  ChatDisplay.tsx  DiceRoller.tsx
frontend/src/hooks/: useRoomDoc.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
