[project]
name = "vtt-ordem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
